Corrected a number of small layout issues
* Forced margin when blocks are aligned left or right
* Search button text is now always white
* Fixed flex sometimes overflowing container

--- a/theme/css/b4st.css
+++ b/theme/css/b4st.css
@@ -230,12 +230,12 @@ main {
 
 .alignleft {
 	float: left;
-	margin-right: 15px;
+	margin-right: 15px !important;
 }
 
 .alignright {
 	float: right;
-	margin-left: 15px;
+	margin-left: 15px !important;
 }
 
 .aligncenter {
@@ -302,6 +302,12 @@ body, .bg-body {
 
 .page-link:hover {
 	color: #7413dc;
+}
+
+.after-content::after {
+	content: "";
+	display: flex;
+	width: 100%;
 }
 
 /* navbar */
