--- a/theme/css/blocks.css
+++ b/theme/css/blocks.css
@@ -46,6 +46,10 @@
   margin: 1.5em auto;
 }
 
+.wp-block-cover {
+	margin: 0 0 1.5em !important;
+}
+
 .wp-block-cover-text p {
   padding: 1.5em 14px;
 }
